--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/mle4d/jsreview/issues"
   },
-  "homepage": "https://github.com/mle4d/jsreview#readme"
+  "homepage": "https://github.com/mle4d/jsreview#readme",
+  "devDependencies": {
+    "eslint": "^6.0.0",
+    "jest": "^24.8.0"
+  }
 }
